<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupdisplay">


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="260dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="387dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/u8odq6obffyfw6rqoflusbihzkolfhn31jyfnfyvkzqavt7yuz9tsw_aagb0cdxef0snjzvv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="200dp">

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/baseline_plus_one_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textView13" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/baseline_question_mark_24"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="103dp"
        android:layout_height="30dp"
        android:text="@string/textView14"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="51dp" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_favorite_border_24"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView15"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="210dp"
        android:layout_height="20dp"
        android:text="@string/textView16"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="263dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="216dp"
        android:layout_height="22dp"
        android:text="@string/textView17"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="332dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="225dp"
        android:layout_height="23dp"
        android:text="@string/textView18"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="391dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="332dp"
        android:layout_height="73dp"
        android:text="@string/button2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="458dp" />

    <CheckBox

        android:id="@+id/checkBox"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:text="@string/checkBox"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="584dp" />


</androidx.constraintlayout.widget.ConstraintLayout>